--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,9 +1,22 @@
+@use '@material/button/mdc-button'
+@use '@material/button'
+@use "@material/list/mdc-list"
+@use "@material/menu-surface/mdc-menu-surface"
+@use "@material/menu/mdc-menu"
+@use "@material/select/styles"
+@use "@material/floating-label/mdc-floating-label"
+@use "@material/line-ripple/mdc-line-ripple"
+@use "@material/notched-outline/mdc-notched-outline"
+@use "@material/textfield"
+
+@include textfield.core-styles
+
 *
     box-sizing: border-box
 
 .board-container 
     position: relative
-    max-width: 1200px
+    max-width: min(1200px, calc(100vh - 180px))
     margin: auto
     width: 100%
     &::after 
@@ -57,3 +70,47 @@
     &.white
         background-color: white
         border-color: black
+
+.crown
+    width: 60%
+    height: 60%
+    margin: 20%
+    border-radius: 50%
+    background-color: yellow
+    border: 5px solid
+
+    &.black
+        background-color: black
+        border-color: white
+    
+    &.white
+        background-color: white
+        border-color: black
+
+.lower
+    max-width: 1000px
+    margin: auto
+
+.controls
+    display: grid
+    grid-template-columns: 1fr 1fr
+
+.foo-button
+    margin: 20px
+    @include button.container-fill-color(#2592c5)
+
+.algorithm-settings
+    margin: 20px
+    margin-bottom: 0px
+    display: grid
+    grid-template-columns: 1fr 160px
+    gap: 20px
+
+.algo-select
+    width: 100%
+
+.took-measure
+    margin: auto
+    display: block
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    color: lightgray
