Added visual indication of which figure has to attack. Fixed manifest and icons

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -56,6 +56,9 @@
     &.selection-move
         border-color: lime
 
+    &.selection-eat
+        border-color: red
+
 .figure
     width: 80%
     height: 80%
