--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,6 +8,7 @@
 @use "@material/line-ripple/mdc-line-ripple"
 @use "@material/notched-outline/mdc-notched-outline"
 @use "@material/textfield"
+@use "@material/snackbar/mdc-snackbar"
 
 @include textfield.core-styles
 
