It kinda works now

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -106,7 +106,7 @@
     margin: 20px
     margin-bottom: 0px
     display: grid
-    grid-template-columns: 1fr 160px
+    grid-template-columns: 1fr 2fr 1fr
     gap: 20px
 
 .algo-select
@@ -123,7 +123,7 @@
     &.right
         grid-column: 2
 
-@media screen and ( max-width: 500px )
+@media screen and ( max-width: 600px )
     .controls 
        grid-template-columns: auto
        gap: 0
